File structure changes

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <title>About | Alec J. Stewart</title>
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="assets/css/stylesheet.css">
+  <link rel="stylesheet" href="stylesheet.css">
   <link rel="icon" href="favicon.png">
 </head>
 <body>
@@ -22,7 +22,7 @@
   <section>
     <h2>About Me</h2>
     <p>My name is Alec Stewart, and I like to make things, I often break things, and sometimes I take things too seriously. I am fascinated by the capabilities of technology and what we can do with them, but I can't dismiss their darker consequences.</p>
-    <p class="center"><img src="assets/img/headshot.jpeg" class="headshot" alt="A headshot photo"></p>
+    <p class="center"><img src="images/headshot.jpeg" class="headshot" alt="A headshot photo"></p>
     <p>When I'm not sitting behind a screen, I like to read and write for pleasure and to learn. I also spend far too much time thinking about how to be a better human and what makes life meaningful.</p>
     <p>This website is a culmination of my interests, but mostly it's my central hub for the interesting tidbits I feel are worth sharing with the world.</p>
   </section>
