--- a/essays/lorem.html
+++ b/essays/lorem.html
@@ -3,7 +3,7 @@
 <head>
   <title>Lorem Ipsum | Alec J. Stewart</title>
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="assets/css/stylesheet.css">
+  <link rel="stylesheet" href="stylesheet.css">
   <link rel="icon" href="favicon.png">
 </head>
 <body>
@@ -30,7 +30,7 @@
   </article>
 
   <section>
-    <p style="text-align: center"><i>Questions, comments, concerns on this essay? Send me an email: <strong>alec [at] alecjstewart.com</strong></i></p>
+    <p class="center"><i>Questions, comments, concerns on this essay? Send me an email: <strong>alec [at] alecjstewart.com</strong></i></p>
   </section>
 
   <footer>
