--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Alec J. Stewart</title>
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="assets/css/stylesheet.css">
+  <link rel="stylesheet" href="stylesheet.css">
   <link rel="icon" href="favicon.png">
 </head>
 <body>
