Added Atom feed and cleaned up build file

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
     <ul>
       <li>Email: <strong>alec [at] alecjstewart.com</strong></li>
       <li>Github: <a href="https://github.com/alecjstewart">@alecjstewart</a></li>
-      <li>Twitter: <a href="https://twitter.com/alecjstewart">@alecjstewart</a> (I'm no longer active on Twitter, but an archive of my tweets can be found <a href="tweets.html">here</a>)</li>
+      <li>Twitter: <a href="https://twitter.com/alecjstewart">@alecjstewart</a> &mdash; I'm no longer active on Twitter, but an archive of my tweets can be found <a href="tweets.html">here</a></li>
     </ul>
   </section>
 {% endblock %}
