Added public key

--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@
         <p>Don't be shy! Feel free to reach out to ask me something, provide feedback, or just chat.</p>
         <ul>
             <li>Email: <strong>alec [at] alecjstewart.com</strong></li>
+            <li>PGP Public Key: <code><strong>B609 3DE5 74AC 58C3 61B0 0F30 16A4 BF6B 234F A6CC</strong></code></li>
             <li>Github: <a href="https://github.com/alecjstewart">@alecjstewart</a></li>
             <li>Twitter: <a href="https://twitter.com/alecjstewart">@alecjstewart</a> &mdash; I'm no longer active on Twitter, but an archive of my tweets can be found <a href="tweets.html">here</a></li>
         </ul>
