--- a/notes.html
+++ b/notes.html
@@ -1,12 +1,12 @@
 {% extends 'templates/base.html' %}
-{% block title %}Essays{% endblock %}
+{% block title %}Notes{% endblock %}
 {% block content %}
     <section>
-        <h2>Essays</h2>
+        <h2>Notes</h2>
         <p>All my thoughts, comments, observations, and everything in-between.</p>
         <ul>
-        {%- for essay in essays %}
-            <li>{{ essay.posted_date_str[0] }} &mdash; <a href="{{ essay.slug[0] }}.html">{{ essay.title[0] }}</a></li>
+        {%- for note in notes %}
+            <li>{{ note.posted_date_str[0] }} &mdash; <a href="{{ note.slug[0] }}.html">{{ note.title[0] }}</a></li>
         {%- endfor %}
         </ul>
     </section>
