--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <h2>Projects</h2>
         <p>I like to keep busy with anything that piques my interest. Below are a few things that have captured my attention enough times for me to not ignore.</p>
         <ul>
-            <li><a href="essays.html">Writing</a> &mdash; Public notes, thoughts, learnings, and comments</li>
+            <li><a href="notes.html">Writing</a> &mdash; Public notes, thoughts, learnings, and comments</li>
             <li><a href="https://github.com/alecjstewart">Code</a> &mdash; Open-source projects on Github</li>
             <li><a href="https://thynker.net">Thynker Newsletter</a> &mdash; Semimonthly musings on great thinkers and questions</li>
         </ul>
