--- a/site/index.html
+++ b/site/index.html
@@ -6,11 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="icon" href="favicon.png">
-    {%- if self.title() %}
-    <title>{% block title %}{% endblock %} &mdash; Alec J. Stewart</title>
-    {%- else %}
     <title>Alec J. Stewart</title>
-    {%- endif %}
 </head>
 <body>
     <header>
@@ -24,7 +20,30 @@
             <li><a href="notes.html">Notes</a></li>
         </ul>
     </nav>
-    {% block content %}{% endblock %}
+    
+    <section>
+        <p>Hi, my name is Alec. I'm a technology enthusiast who also likes to take a step back from the screen to consider how to be a better human and what makes life meaningful.</p>
+        <p>This website is my public learning space and central hub for everything I find interesting. It's minimal on purpose&mdash;I want it simple and to focus only on what's necessary.</p>
+        <p>If you want to stick around, you can read more <a href="about.html">about me</a> or <a href="notes.html">the notes I felt were worth sharing.</a></p>
+    </section>
+
+    <section>
+        <h2>Recent Notes <small><a href="notes.html">view all</a></small></h2>
+        <ul>
+            <li><a href="lipsum.html">Lorem Ipsum</a></li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Search</h2>
+        <form action="https://duckduckgo.com/" method="get">
+            <label for="q">Search alecjstewart.com for anything:</label>
+            <input type="text" name="q" value="">
+            <input type="hidden" name="sites" value="alecjstewart.com">
+            <input type="submit" value="Search">
+        </form>
+    </section>
+
     <footer>
         <p>&copy; 2021 ajs &middot; <a href="feed.xml">rss</a></p>
     </footer>
