--- a/site/about.html
+++ b/site/about.html
@@ -1,11 +1,31 @@
-{% extends 'templates/base.html' %}
-{% block title %}About{% endblock %}
-{% block content %}
+<!DOCTYPE html>
+<html lang=en>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="icon" href="favicon.png">
+    <title>About &mdash; Alec J. Stewart</title>
+</head>
+<body>
+    <header>
+        <h1><a href="index.html">Alec J. Stewart</a></h1>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="notes.html">Notes</a></li>
+        </ul>
+    </nav>
+    
     <section>
         <h2>About Me</h2>
         <p>My name is Alec Stewart, and I like to make things, I often break things, and sometimes I take things too seriously. I am fascinated by the capabilities of technology and what we can do with them, but I can't dismiss their darker consequences.</p>
         <p class="center"><img src="images/headshot.jpeg" class="headshot" alt="A headshot photo"></p>
-        <p>When I'm not sitting behind a screen, I like to read and write for pleasure and to learn. I also spend far too much time thinking about how to be a better human and what makes life meaningful.</p>
+        <p>When I'm not sitting behind a screen, I like to <a href="books.html">read</a> and write for pleasure and to learn. I also spend far too much time thinking about how to be a better human and what makes life meaningful.</p>
         <p>This website is a culmination of my interests, but mostly it's my central hub for the interesting tidbits I feel are worth sharing with the world.</p>
     </section>
 
@@ -29,4 +49,35 @@
             <li>Twitter: <a href="https://twitter.com/alecjstewart">@alecjstewart</a> &mdash; I'm no longer active on Twitter, but an archive of my tweets can be found <a href="tweets.html">here</a></li>
         </ul>
     </section>
-{% endblock %}
+
+    <footer>
+        <p>&copy; 2021 ajs &middot; <a href="feed.xml">rss</a></p>
+    </footer>
+
+    <button class="btn-toggle"></button>
+    <script>
+        const btn = document.querySelector(".btn-toggle");
+
+        const currentTheme = localStorage.getItem("theme");
+        if (currentTheme == "dark") {
+            document.body.classList.add("dark-mode");
+            btn.innerHTML = "Light Mode";
+        } else {
+            btn.innerHTML = "Dark Mode";
+        }
+
+        btn.addEventListener("click", function () {
+            document.body.classList.toggle("dark-mode");
+
+            let theme = "light";
+            if (document.body.classList.contains("dark-mode")) {
+                theme = "dark";
+                btn.innerHTML = "Light Mode";
+            } else {
+                btn.innerHTML = "Dark Mode";
+            }
+            localStorage.setItem("theme", theme);
+        });
+    </script>
+</body>
+</html>
