Added books to projects list

--- a/site/about.html
+++ b/site/about.html
@@ -34,6 +34,7 @@
         <p>I like to keep busy with anything that piques my interest. Below are a few things that have captured my attention enough times for me to not ignore.</p>
         <ul>
             <li><a href="notes.html">Writing</a> &mdash; Public notes, thoughts, learnings, and comments</li>
+            <li><a href="books.html">Books</a> &mdash; All the books I'm currently reading and have read</li>
             <li><a href="https://github.com/alecjstewart">Code</a> &mdash; Open-source projects on Github</li>
             <li><a href="https://thynker.net">Thynker Newsletter</a> &mdash; Semimonthly musings on great thinkers and questions</li>
         </ul>
