Small changes to books

--- a/site/books.html
+++ b/site/books.html
@@ -29,7 +29,8 @@
             <li><em>Foundation</em> by Isaac Asimov</li>
         </ul>
 
-        <h3>Read <small>sort by <button class="btn-author" onclick="sortList('author')">author</button>, <button class="btn-rating" onclick="sortList('rating')">rating</button>, or <button class="btn-title" onclick="sortList('title')">title</button></small></h3>
+        <h3>Read</h3>
+        <p>Sort by <button class="btn-author" onclick="sortList('author')">author</button>, <button class="btn-rating" onclick="sortList('rating')">rating</button>, or <button class="btn-title" onclick="sortList('title')">title</button>.</p>
         <ul id="books">
             <li><span class="book-title">1984</span> by George <span class="book-author">Orwell</span> <strong>(<span class="book-rating">8</span>/10)</strong></li>
             <li><span class="book-title">A Man Called Ove</span> by Fredrik <span class="book-author">Backman</span> <strong>(<span class="book-rating">7</span>/10)</strong></li>
