--- a/site/about.html
+++ b/site/about.html
@@ -25,7 +25,7 @@
         <h2>About Me</h2>
         <p>My name is Alec Stewart, and I like to make things, I often break things, and sometimes I take things too seriously. I am fascinated by the capabilities of technology and what we can do with them, but I can't dismiss their darker consequences.</p>
         <p class="center"><img src="images/headshot.jpeg" class="headshot" alt="A headshot photo"></p>
-        <p>When I'm not sitting behind a screen, I like to <a href="books.html">read</a> and write for pleasure and to learn. I also spend far too much time thinking about how to be a better human and what makes life meaningful.</p>
+        <p>When I'm not sitting behind a screen, I like to <a href="books.html">read</a> and <a href="notes.html">write</a> for pleasure and to learn. I also spend far too much time thinking about how to be a better human and what makes life meaningful.</p>
         <p>This website is a culmination of my interests, but mostly it's my central hub for the interesting tidbits I feel are worth sharing with the world.</p>
     </section>
 
